Added authors and github repo link

--- a/data model/index.html
+++ b/data model/index.html
@@ -1117,7 +1117,26 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
       {
         "name": "Federico Cassissa",
       }]
-      "publishDate": "2021-04-21"
+      "authors": [
+      {
+        "name": "Ilenia Galluccio",
+      },
+      {
+        "name": "Luca Mirenda",
+      },
+      {
+        "name": "Ilaria Torre",
+      }]
+      "publishDate": "2021-04-21",
+      "otherLinks": [
+      {
+        "key": "Repository",
+        "data": [
+        {
+          "value": "Github Repository",
+          "href": "https://github.com/w3c/web-annotation"
+        }]
+      }
     }
   </script>
 </head>
@@ -1145,13 +1164,26 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
       <dt>Editors:</dt>
       <dd class="p-author h-card vcard" property="bibo:editor" resource="_:editor0"><span property="rdf:first" typeof="foaf:Person"><span property="foaf:name" class="p-name fn">Federico Cassissa</span>
       </dd>
-      <!--
+      <dt>Authors:</dt>
+      <dd class="p-author h-card vcard" property="bibo:editor" resource="_:editor0">
+        <span property="rdf:first" typeof="foaf:Person"><span property="foaf:name" class="p-name fn">Federico Cassissa</span>
+      </dd>
+      <dd class="p-author h-card vcard" property="bibo:editor" resource="_:editor0">
+        <span property="rdf:first" typeof="foaf:Person"><span property="foaf:name" class="p-name fn">Ilenia Galluccio</span>
+      </dd>
+      <dd class="p-author h-card vcard" property="bibo:editor" resource="_:editor0">
+        <span property="rdf:first" typeof="foaf:Person"><span property="foaf:name" class="p-name fn">Luca Mirenda</span>
+      </dd>
+      <dd class="p-author h-card vcard" property="bibo:editor" resource="_:editor0">
+        <span property="rdf:first" typeof="foaf:Person"><span property="foaf:name" class="p-name fn">Ilaria Torre</span>
+      </dd>
       <dt>Repository:</dt>
       <dd>
-        <a href="https://github.com/w3c/web-annotation">
+        <a href="https://github.com/Teldh/edurell">
                       Github Repository
                     </a>
       </dd>
+      <!--
       <dt>Changes:</dt>
       <dd>
         <a href="diff.html">
